made addon using File instead of AddonFile
